--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -37,6 +37,7 @@ project.ext.getGitHash = {
 
 repositories {
     mavenLocal()
+    maven("https://repo.nexomc.com/releases")
     maven {
         name = 'aikar'
         url = 'https://repo.aikar.co/content/groups/aikar'
@@ -120,6 +121,7 @@ dependencies {
     compileOnly "commons-io:commons-io:2.6"
     compileOnly "xyz.jpenilla:squaremap-api:1.1.0-SNAPSHOT"
     compileOnly "com.alessiodp.parties:parties-api:3.2.6"
+    compileOnly("com.nexomc:nexo:1.9")
 }
 
 jar {
